Change title to 'EmmaTechRelief Fund' and update content
Updated title and header to 'EmmaTechRelief Fund' and expanded the fundraising initiative description.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>TechRelief Fund</title>
+    <title>EmmaTechRelief Fund</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-    <h1>TechRelief Fund</h1>
+    <h1>EmmaTechRelief Fund</h1>
     <p>Empowering Communities Through Technology</p>
 </header>
 
@@ -20,7 +20,7 @@
 
 <div class="container">
     <h2>Support IT Access for Everyone</h2>
-    <p>Help fund free IT support services, laptop donations, and cybersecurity assistance.</p>
+    <p>The purpose of this fundraising initiative is to provide free IT support services, including computer repair, troubleshooting, and system setup for individuals who lack access to professional assistance. Funds will also be used to refurbish and distribute laptops to students who cannot afford personal devices. In addition, the initiative will deliver basic cybersecurity services, such as network configuration and malware protection, to ensure safe and secure digital participation for families and small businesses..</p>
     <a href="campaign.html" class="button">Donate Now</a>
 
     <h3>Featured Campaign</h3>
