--- a/campaign.html
+++ b/campaign.html
@@ -18,14 +18,14 @@
 </nav>
 
 <div class="container">
-    <h2>Goal: $5,000</h2>
-    <p>Raised: $3,750</p>
+    <h2>Goal: $10,000</h2>
+    <p>Raised: $5,750</p>
 
     <div class="progress-bar">
         <div class="progress"></div>
     </div>
 
-    <p>This campaign provides refurbished laptops to underserved students.</p>
+    <p>This campaign collects, refurbishes, and distributes laptops to students from low-income households who do not have consistent access to a computer. Each device is professionally restored, securely wiped, updated with licensed software, and equipped with productivity tools to support academic success. The goal is to reduce educational inequality by ensuring every student has reliable access to digital learning resources..</p>
 
     <h3>Donate</h3>
     <button class="button">$25</button>
