Revise mission statement in about.html
Updated mission statement to include device donations and cybersecurity efforts.

--- a/about.html
+++ b/about.html
@@ -19,10 +19,11 @@
 
 <div class="container">
     <h2>Our Mission</h2>
-    <p>We bridge the digital divide by funding IT services and providing access to technology.</p>
+    <p>Emma-TechRelief is dedicated to closing the technology gap by funding IT services, donating devices, and strengthening cybersecurity for underserved communities — because opportunity should never be limited by access to technology..</p>
 
     <h3>Contact Us</h3>
     <p>Email: emma@techrelief.com</p>
+    
 </div>
 
 <footer>
