--- a/campaign.html
+++ b/campaign.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Campaign - Laptops for Students</title>
+    <title>Laptops for Students Campaign</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,23 +18,43 @@
 </nav>
 
 <div class="container">
-    <h2>Goal: $10,000</h2>
-    <p>Raised: $5,750</p>
 
-    <div class="progress-bar">
-        <div class="progress"></div>
+    <div class="card">
+
+        <img src="images/student1.jpg" alt="Student with laptop">
+
+        <h2>Goal: $5,000</h2>
+        <p><strong>Raised:</strong> $3,750</p>
+
+        <div class="progress-bar">
+            <div class="progress"></div>
+        </div>
+
+        <p class="story">
+            Meet Amin, a high school junior who dreams of becoming a software engineer. 
+            Before receiving a refurbished laptop, she completed assignments using her 
+            phone and borrowed devices from classmates. With reliable access to her own 
+            computer, Amina can now attend virtual tutoring sessions, complete coding 
+            projects, and apply for college scholarships confidently.
+        </p>
+
+        <p>
+            This campaign collects donated laptops, professionally refurbishes them, 
+            installs updated software, and distributes them to underserved students 
+            who lack access to personal technology.
+        </p>
+
+        <h3>How You Can Help</h3>
+        <button class="button">$25</button>
+        <button class="button">$50</button>
+        <button class="button">$100</button>
+
     </div>
 
-    <p>This campaign collects, refurbishes, and distributes laptops to students from low-income households who do not have consistent access to a computer. Each device is professionally restored, securely wiped, updated with licensed software, and equipped with productivity tools to support academic success. The goal is to reduce educational inequality by ensuring every student has reliable access to digital learning resources..</p>
-
-    <h3>Donate</h3>
-    <button class="button">$25</button>
-    <button class="button">$50</button>
-    <button class="button">$100</button>
 </div>
 
 <footer>
-    © 2026 TechRelief Fund
+    © 2026 Emma-TechRelief | Bridging the Digital Divide
 </footer>
 
 </body>
